force-app/main/default/objects/OCE__Publication__c/OCE__Publication__c.object-meta.xml
<CustomObject>
    <description>Publication associated with KOL</description>
    <label>Publication</label>
    <nameField>
        <displayFormat>PUBL-{0000}</displayFormat>
        <label>Publication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>