force-app/main/default/objects/OCE__Publication__c/fields/Lilly_Abstract__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Abstract__c</fullName>
    <label>Abstract</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>