force-app/main/default/objects/OCE__Publication__c/fields/Lilly_Author__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Author__c</fullName>
    <label>Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>