force-app/main/default/objects/OCE__Publication__c/fields/Lilly_DOI__c.field-meta.xml
<CustomField>
    <fullName>Lilly_DOI__c</fullName>
    <label>DOI #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>