force-app/main/default/objects/OCE__Publication__c/fields/Lilly_H1_HCP__c.field-meta.xml
<CustomField>
    <fullName>Lilly_H1_HCP__c</fullName>
    <label>H1 HCP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>