force-app/main/default/objects/OCE__Publication__c/fields/Lilly_H1_Publication_Id__c.field-meta.xml
<CustomField>
    <fullName>Lilly_H1_Publication_Id__c</fullName>
    <description>H1 id for the publication</description>
    <externalId>true</externalId>
    <label>H1 Publication</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>