force-app/main/default/objects/OCE__Publication__c/fields/Lilly_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Keywords__c</fullName>
    <label>Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>