force-app/main/default/objects/OCE__Publication__c/fields/Lilly_PMID__c.field-meta.xml
<CustomField>
    <fullName>Lilly_PMID__c</fullName>
    <label>PMID #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>