force-app/main/default/objects/OCE__Publication__c/fields/Lilly_Publication_Types__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Publication_Types__c</fullName>
    <label>Publication Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>