force-app/main/default/objects/OCE__Publication__c/fields/Lilly_Publisher__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Publisher__c</fullName>
    <label>Publisher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>