force-app/main/default/objects/OCE__Publication__c/fields/Lilly_Social_Media_Count__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Social_Media_Count__c</fullName>
    <label>Social Media Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>