force-app/main/default/objects/OCE__Publication__c/fields/Lilly_Title__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Title__c</fullName>
    <label>Title</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>