force-app/main/default/objects/OCE__Publication__c/fields/OCE__Abstract__c.field-meta.xml
<CustomField>
    <fullName>OCE__Abstract__c</fullName>
    <description>Short description of publication</description>
    <label>Abstract</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>