force-app/main/default/objects/OCE__Publication__c/fields/OCE__Citations__c.field-meta.xml
<CustomField>
    <fullName>OCE__Citations__c</fullName>
    <description>Number of citations</description>
    <label>Citations</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>