force-app/main/default/objects/OCE__Publication__c/fields/OCE__ImpactFactor__c.field-meta.xml
<CustomField>
    <fullName>OCE__ImpactFactor__c</fullName>
    <description>Number of times a publication is listed</description>
    <label>Impact Factor</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>