force-app/main/default/objects/OCE__Publication__c/fields/OCE__IssueDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__IssueDate__c</fullName>
    <description>Date of publication</description>
    <label>Issue Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>