force-app/main/default/objects/OCE__Publication__c/fields/OCE__ListedInISI__c.field-meta.xml
<CustomField>
    <fullName>OCE__ListedInISI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the pubication has been issued in the source listed in ISI</description>
    <label>Listed In ISI</label>
    <type>Checkbox</type>
</CustomField>