force-app/main/default/objects/OCE__Publication__c/fields/OCE__OfflineLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineLastModifiedDate__c</fullName>
    <description>Date and time when this record was last modified by a User offline</description>
    <inlineHelpText>Date and time when this record was last modified by a User offline</inlineHelpText>
    <label>Offline Last Modified Date</label>
    <type>DateTime</type>
</CustomField>