force-app/main/default/objects/OCE__Publication__c/fields/OCE__Source__c.field-meta.xml
<CustomField>
    <fullName>OCE__Source__c</fullName>
    <description>Source of publication</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>