force-app/main/default/objects/OCE__Publication__c/fields/OCE__Title__c.field-meta.xml
<CustomField>
    <fullName>OCE__Title__c</fullName>
    <description>Full title of publication</description>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>