force-app/main/default/objects/OCE__Publication__c/fields/OCE__TypeJournal__c.field-meta.xml
<CustomField>
    <fullName>OCE__TypeJournal__c</fullName>
    <description>Type of journal</description>
    <label>Type Journal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>