force-app/main/default/objects/OCE__Publication__c/fields/OCE__URL__c.field-meta.xml
<CustomField>
    <fullName>OCE__URL__c</fullName>
    <description>Web link to the publication</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>